--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 002\n",
+        "# chk 003\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -1188,7 +1188,7 @@
         "    video_bit_rate = \"\"\n",
         "    audio_tracks = None\n",
         "    magnet = \"\"\n",
-        "    downloaded_dirs = None\n",
+        "    downloaded_diritems = None\n",
         "    total_downloaded = 0\n",
         "    verify_download = None\n",
         "    old_files = None\n",
@@ -2155,73 +2155,84 @@
         "    tf = handle.torrent_file()\n",
         "    files = tf.files()\n",
         "    priorities = handle.get_file_priorities()\n",
+        "    cmd = ''\n",
         "    for i in range(files.num_files()):              # Delete files if they are not selected\n",
         "        file_path = path + \"/\" + files.file_path(i)\n",
         "        if os.path.isfile(file_path) and priorities[i] == 0:\n",
-        "            !rm \"$file_path\"\n",
+        "            cmd = f'rm \"{file_path}\"'\n",
+        "            !$cmd\n",
         "            dirpath = os.path.dirname(file_path)\n",
         "            if is_empty(dirpath):\n",
-        "                !rm -r \"$dirpath\"\n",
+        "                cmd = f'rm -r \"{dirpath}\"'\n",
+        "                !$cmd\n",
         "    if os.path.isdir(maindir):\n",
         "        dircontent = next(os.walk(maindir))[1]\n",
         "        for path in dircontent:                     # Delete empty dirs\n",
         "            if is_empty(path):\n",
-        "                !rm -r \"$path\"\n",
+        "                cmd = f'rm -r \"{path}\"'\n",
+        "                !$cmd\n",
+        "    if cmd: pass\n",
         "\n",
         "def clean_download(attrs: DownloadAttrs, path):\n",
         "    info(f\"Cleaning type: {types[attrs.type_]} name: {attrs.name}\")\n",
-        "    attrs.downloaded_dirs = []\n",
+        "    attrs.downloaded_diritems = []\n",
         "    if attrs.type_ == MOVIE:\n",
-        "        after_shave(path, attrs.save_name, pathitems= attrs.downloaded_dirs)\n",
+        "        return after_shave_movie(path, attrs.save_name, attrs.downloaded_diritems)\n",
         "    elif attrs.type_ == SHOW:\n",
-        "        clean_tvshow(path, diritems = attrs.downloaded_dirs)\n",
+        "        return clean_tvshow(path, diritems = attrs.downloaded_diritems)\n",
         "    elif attrs.type_ == SEASON or attrs.type_ == EPISODE:\n",
         "        diritem =  ('', clean_season(path))\n",
-        "        attrs.downloaded_dirs.append(diritem)\n",
+        "        attrs.downloaded_diritems.append(diritem)\n",
         "\n",
-        "subtitlefile_extensions = {\".srt\", \".vtt\", \".sbv\", \".ssa\", \".dfxp\", \".ttml\", \".sup\", \".idx\"}\n",
-        "def after_shave(diritem, newname, v= False, pathitems = []):\n",
-        "    maindircontent = next(os.walk(diritem))\n",
-        "    originaldiritems = [('', maindircontent[2])]\n",
-        "    for dir in maindircontent[1]:\n",
-        "        if 'sub' in dir.lower():\n",
-        "            subspath = f\"{diritem}/{dir}\" \n",
-        "            originaldiritems.append((dir, next(os.walk(subspath))[2]))\n",
+        "def after_shave_movie(path, newname, downloaded_diritems = []):\n",
+        "    maindircontent = next(os.walk(path))\n",
+        "    originaldiritems = [('/', maindircontent[2])]\n",
+        "    for fulldirpath in maindircontent[1]:\n",
+        "        if 'sub' in fulldirpath.lower():\n",
+        "            subspath = f\"{path}/{fulldirpath}\" \n",
+        "            originaldiritems.append((fulldirpath, next(os.walk(subspath))[2]))\n",
+        "            info(f\"Movies subtites found: {fulldirpath}\")\n",
         "            break\n",
-        "    for diritem in originaldiritems:\n",
-        "        diritem = (diritem[0], [])\n",
-        "        srtcount = 0\n",
-        "        for filename in diritem[1]:\n",
-        "            suffix = ''\n",
-        "            filename_split = os.path.splitext(filename)\n",
-        "            filenamewithoutextension = filename_split[0]\n",
-        "            fileextension = filename_split[1].lower()\n",
-        "            originalfilepath = f'{diritem}/{filename}'\n",
-        "            if any(contains(filename, check) for check in skip_list):\n",
-        "                if v:\n",
-        "                    print(f\"Deleting: {originalfilepath}\")\n",
-        "                cmd = f'rm \"{originalfilepath}\"'\n",
-        "                !$cmd\n",
-        "                continue\n",
-        "            elif  (fileextension == \".mp4\" or fileextension == \".mkv\" or fileextension in subtitlefile_extensions):\n",
-        "                if fileextension in subtitlefile_extensions: \n",
-        "                    langsearch = langs_pt.findall(filenamewithoutextension)     #if digitssuff_pt.split(filenamewithoutextension)[0] != newname:\n",
-        "                    if langsearch:\n",
-        "                        suffix = f\".{title(langsearch[-1])}\" \n",
-        "                    else:\n",
-        "                        srtcount += 1\n",
-        "                        suffix = f\"-{srtcount}\"\n",
-        "                if filenamewithoutextension != newname:\n",
-        "                    filenewname = newname + suffix + fileextension\n",
-        "                    if v: print(f\"Renaming: {originalfilepath[36:]} to {filenewname}\")\n",
-        "                    newsubtitlefile = f\"{diritem}/{filenewname}\"\n",
-        "                    cmd = f'mv \"{originalfilepath}\" \"{newsubtitlefile}\"'\n",
+        "    try:\n",
+        "        for diritem in originaldiritems:\n",
+        "            newdiritem = (diritem[0], [])\n",
+        "            srtcount = 0\n",
+        "            fulldirpath =  f\"{path}/{diritem[0]}/\" if diritem[0] else f'{path}/'\n",
+        "            info(f\"Checking dir at {fulldirpath}\")\n",
+        "            for filename in diritem[1]:\n",
+        "                suffix = ''\n",
+        "                filename_split = os.path.splitext(filename)\n",
+        "                filenamewithoutextension = filename_split[0]\n",
+        "                fileextension = filename_split[1].lower()\n",
+        "                originalfilepath = fulldirpath + filename\n",
+        "                if any(contains(filename, check) for check in skip_list):\n",
+        "                    info(f\"Deleting: {originalfilepath}\")\n",
+        "                    cmd = f'rm \"{originalfilepath}\"'\n",
         "                    !$cmd\n",
-        "                    filename = filenewname\n",
-        "                diritem[1].append(filename)\n",
-        "        pathitems.append(diritem)\n",
+        "                    continue\n",
+        "                elif  (fileextension == \".mp4\" or fileextension == \".mkv\" or fileextension in subtitlefile_extensions):\n",
+        "                    if fileextension in subtitlefile_extensions: \n",
+        "                        langsearch = langs_pt.findall(filenamewithoutextension)     #if digitssuff_pt.split(filenamewithoutextension)[0] != newname:\n",
+        "                        if langsearch:\n",
+        "                            suffix = f\".{title(langsearch[-1])}\" \n",
+        "                        else:\n",
+        "                            srtcount += 1\n",
+        "                            suffix = f\"-{srtcount}\"\n",
+        "                    if filenamewithoutextension != newname:\n",
+        "                        filenewname = newname + suffix + fileextension\n",
+        "                        info(f\"Renaming: {originalfilepath[36:]} to {filenewname}\")\n",
+        "                        renamedfile = fulldirpath + filenewname\n",
+        "                        cmd = f'mv \"{originalfilepath}\" \"{renamedfile}\"'\n",
+        "                        !$cmd\n",
+        "                        filename = filenewname\n",
+        "                    newdiritem[1].append(filename)\n",
+        "            downloaded_diritems.append(newdiritem)\n",
+        "    except:\n",
+        "        error(ex())\n",
+        "        return False\n",
+        "    else:\n",
+        "        return True\n",
         "    if cmd: pass\n",
-        "    return\n",
         "\n",
         "def clean_movies_dir(movie_path= config.movies_path, v= False, backup= False, delete_empty = False, clean = True) :\n",
         "    dir_content = filter_checks(next(os.walk(movie_path))[1])\n",
@@ -2255,7 +2266,7 @@
         "        !mv \"$p1\" \"$p2\"\n",
         "        path = p2\n",
         "        print(newname)\n",
-        "    after_shave(path, newname)\n",
+        "    after_shave_movie(path, newname)\n",
         "\n",
         "def clean_tvshows(path = \"\"):\n",
         "    if not path:\n",
@@ -3312,7 +3323,7 @@
         "        if Type == MOVIE:\n",
         "            newname = name_movie(name)\n",
         "            save_path = config.movies_path\n",
-        "            after_shave(p1, newname)\n",
+        "            after_shave_movie(p1, newname)\n",
         "        elif Type == SHOW:\n",
         "            newname = name_show(name)\n",
         "            clean_tvshow(p1)\n",
@@ -3411,7 +3422,7 @@
         "    attrs.old_files = set()\n",
         "    delstr = '.del' + nowstr()\n",
         "    if 1 <= attrs.type_/TV < 1.1 :\n",
-        "        for diritem in attrs.downloaded_dirs: #diritem is tuple of a dir and its content\n",
+        "        for diritem in attrs.downloaded_diritems: #diritem is tuple of a dir and its content\n",
         "            season = get_season(diritem[0])\n",
         "            if season:\n",
         "                for file in diritem[1]:\n",
@@ -3470,7 +3481,7 @@
         "    size = 0 \n",
         "    info(\"File transfer verification items.\")\n",
         "    itemstr = \"\"\n",
-        "    for item in attrs.downloaded_dirs:\n",
+        "    for item in attrs.downloaded_diritems:\n",
         "        p01 = '/' + item[0] if item[0] else ''\n",
         "        base = path + p01\n",
         "        to_base = attrs.target_save_dir + p01\n",
@@ -3519,38 +3530,39 @@
         "    attrs: DownloadAttrs = handle.attrs\n",
         "    status = handle.status()\n",
         "    name = status.name\n",
-        "    presumedlocalsavepath = status.save_path + \"/\" + name\n",
-        "    localsavepath = status.save_path\n",
+        "    localsavingpath = status.save_path + \"/\" + name\n",
+        "    localsavedpath = status.save_path\n",
         "    donesavepath = done_path + \"/\" + attrs.save_name\n",
         "    info(f'Transfering files for: {name}\\nNewname: {attrs.save_name}')\n",
-        "    if os.path.exists(presumedlocalsavepath):\n",
-        "        hasnodir = not os.path.isdir(presumedlocalsavepath)\n",
+        "    if os.path.exists(localsavingpath):\n",
+        "        hasnodir = not os.path.isdir(localsavingpath)\n",
         "        if hasnodir: #move all dirless files here\n",
         "            info(f'The download doesnt have a directory\\nMoving download files into a directory with the same name.')\n",
-        "            localsavepath = status.save_path + \"/\" + os.path.splitext(name)[0]\n",
-        "            os.makedirs(localsavepath, exist_ok = True)\n",
+        "            localsavedpath = status.save_path + \"/\" + os.path.splitext(name)[0]\n",
+        "            os.makedirs(localsavedpath, exist_ok = True)\n",
         "            files = handle.torrent_file().files()\n",
         "            for i in range(files.num_files()):\n",
         "                file_path = status.save_path + \"/\" + files.file_path(i)\n",
         "                if not copy:\n",
-        "                    info(f'Moving {file_path} to {localsavepath}')\n",
-        "                    cmd = f'mv \"{file_path}\" \"{localsavepath}\"'\n",
+        "                    info(f'Moving {file_path} to {localsavedpath}')\n",
+        "                    cmd = f'mv \"{file_path}\" \"{localsavedpath}\"'\n",
         "                else:\n",
-        "                    info(f'Copying {file_path} to {localsavepath}')\n",
-        "                    cmd = f'cp \"{file_path}\" \"{localsavepath}\"'\n",
+        "                    info(f'Copying {file_path} to {localsavedpath}')\n",
+        "                    cmd = f'cp \"{file_path}\" \"{localsavedpath}\"'\n",
         "                !$cmd \n",
-        "            presumedlocalsavepath = localsavepath \n",
-        "        shave_download(handle, localsavepath, presumedlocalsavepath)\n",
-        "        clean_download(attrs, path= presumedlocalsavepath)\n",
+        "            localsavingpath = localsavedpath \n",
+        "        shave_download(handle, localsavedpath, localsavingpath)\n",
+        "        if not clean_download(attrs, path= localsavingpath):\n",
+        "            error(\"An error occured during cleaning the download.\")\n",
         "        if (not copy) or hasnodir:\n",
-        "            info(f'Moving to done path with the new name\\n {presumedlocalsavepath} to {donesavepath}')\n",
-        "            cmd = f'mv \"{presumedlocalsavepath}\" \"{donesavepath}\"'\n",
+        "            info(f'Moving to done path with the new name\\n {localsavingpath} to {donesavepath}')\n",
+        "            cmd = f'mv \"{localsavingpath}\" \"{donesavepath}\"'\n",
         "        else:\n",
-        "            info(f'Copying to done path with the new name\\n {presumedlocalsavepath} to {donesavepath}')  \n",
-        "            cmd = f'cp -r \"{presumedlocalsavepath}\" \"{donesavepath}\"'\n",
+        "            info(f'Copying to done path with the new name\\n {localsavingpath} to {donesavepath}')  \n",
+        "            cmd = f'cp -r \"{localsavingpath}\" \"{donesavepath}\"'\n",
         "        !$cmd\n",
         "    else:\n",
-        "        m = f\"Download dir or file is missing {presumedlocalsavepath} \"\n",
+        "        m = f\"Download dir or file is missing {localsavingpath} \"\n",
         "        error(m)\n",
         "        release()\n",
         "    if not attrs.save_name:\n",
@@ -3561,13 +3573,13 @@
         "    if attrs.type_ == EPISODE and os.path.isdir(donesavepath):\n",
         "        donesavepath = donesavepath + \"/\"     \n",
         "    if os.path.exists(donesavepath):\n",
-        "        if attrs.replace and attrs.downloaded_dirs:\n",
+        "        if attrs.replace and attrs.downloaded_diritems:\n",
         "            clean_download_destination(attrs) \n",
         "        info(f'Saving {attrs.save_name} to: {attrs.save_path}')\n",
         "        cmd = f'rsync --size-only -r \"{donesavepath}\" \"{attrs.save_path}\"'\n",
-        "        output01 = !$cmd\n",
-        "        if output01:\n",
-        "            error(lines = output01)\n",
+        "        output0001 = !$cmd\n",
+        "        if output0001:\n",
+        "            error(lines= output0001)\n",
         "            main_verification = False\n",
         "        else:\n",
         "            main_verification = verify_saving_download(attrs)   \n",
@@ -3575,9 +3587,9 @@
         "            for bkpath in attrs.baksv:\n",
         "                info(f'Copying {attrs.save_name} to: {bkpath}')\n",
         "                cmd = f'!rsync --size-only -r \"{donesavepath}\" \"{bkpath}\"'\n",
-        "                output01 = !$cmd\n",
-        "                if output01:\n",
-        "                    error(lines = output01)\n",
+        "                output0001= !$cmd\n",
+        "                if output0001:\n",
+        "                    error(lines= output0001)\n",
         "        if main_verification:\n",
         "            info(f'Deleting {donesavepath}')\n",
         "            cmd = f'rm -r \"{donesavepath}\"' \n",
@@ -3600,6 +3612,7 @@
         "            return False\n",
         "    else:\n",
         "        error(f\"Files for: {attrs.save_name} were not transfered.\")\n",
+        "        cmd = ''\n",
         "        if cmd: pass\n",
         "        return False\n",
         "\n",
@@ -4020,7 +4033,6 @@
         "        config.ftphost = configview1r1v3ftphost_text.value \n",
         "        config.ftpuser = configview1r1v3ftpuser_text.value \n",
         "        config.ftppassword = configview1r1v3ftppass_text.value \n",
-        "    config.gdriveenabled = configview1r1v2gdrivetoggle_checkbox.value\n",
         "    if config.gdriveenabled and IS_ENV_COLAB :\n",
         "        storageandpathes()\n",
         "    \n",
@@ -4452,6 +4464,10 @@
         "        }\n",
         "        .widget-label.label-flex {\n",
         "            display: flex;\n",
+        "        }\n",
+        "        label.widget-label-basic {\n",
+        "            display: flex;\n",
+        "            justify-content: center;\n",
         "        }\n",
         "        .jupyter-button{\n",
         "            border-radius: 6px !important;\n",
@@ -4942,8 +4958,8 @@
         "configview1r1v1_vbox = VBox((configview1r1v1activedownload_numeric,), layout= col4layout)\n",
         "\n",
         "configview1r1v2ftptoggle_checkbox = Checkbox(description= \"Enable FTP\", value= False, disabled= False)\n",
-        "configview1r1v2gdrivetoggle_checkbox = Checkbox(description= \"Enable Google Dirve\", value= True)\n",
-        "configview1v2vbox = VBox((configview1r1v2ftptoggle_checkbox, configview1r1v2gdrivetoggle_checkbox), layout= col4layout)\n",
+        "configview1v2vbox = VBox((configview1r1v2ftptoggle_checkbox,), layout= col4layout)\n",
+        "configview1v2vbox.layout.height = '45px'\n",
         "\n",
         "configview1r1v3ftphost_text = Text(placeholder= \"FTP host address\", description= \"FTP Host\", style= input_style)\n",
         "configview1r1v3ftpuser_text = Text(placeholder= \"FTP account username\", description= \"FTP Username\", style= input_style)\n",
