--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 003\n",
+        "# chk 00\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -354,6 +354,7 @@
         "    nfkd_form = unicodedata.normalize('NFKD', input_str)\n",
         "    return u\"\".join([c for c in nfkd_form if not unicodedata.combining(c)])\n",
         "\n",
+        "year_pt = re.compile(r\"\\d{4}\")\n",
         "def find_title(title_raw, year_raw):\n",
         "    year = year_pt.search(year_raw)\n",
         "    year = year.group() if year else \"\"\n",
@@ -1109,17 +1110,16 @@
         "#eps2num_pt = re.compile(r\"(?<=\\d{1}[Xx])\\d{1,2}\\b\")\n",
         "#skip_re = re.compile(r\"(.txt)|(.i?nfo?)|(www.yts)|(RARBG_DO_NOT|rarbg_do_not)\")\n",
         "\n",
-        "season_pt1 = re.compile(r\"\\b([S,s]|[S,s]eason([\\s,\\.]?))\\d{1,2}\")\n",
         "featurettes_pt = re.compile(r\"[F,f]eature[a-z]*|[E,e]xtras?\")\n",
         "mf_pt = re.compile(r\"((?<=\\b[S,s])|(?<=[S,s]eason)|(?<=[S,s]eason[\\s,\\.]))([1-9][0-9]?|0?[1-9])\")\n",
         "eps_pt = re.compile(r\"\\b([Ss]\\d{1,2}[Ee]\\d{1,2}|\\d{1,2}[xX]\\d{1,2}|[Ss]n?\\d{1,2}\\s?[Ee](ps?)?\\d{1,2})(?=[\\s\\.])\")\n",
         "check_sn_pt = re.compile(r\"[\\s,\\.]([S,s]\\d{1,2}|[Ss][Ee][Aa][Ss][Oo][Nn]([\\s,\\.]?)\\d{1,2})(?=[\\s,\\.]|e\\d{1,2}-\\d{1,2})(?!\\sto)\")\n",
-        "year_pt = re.compile(r\"\\d{4}\")\n",
         "yearsuff_pt = re.compile(r\"\\d{4}$\")\n",
         "langs_pt = re.compile(r\"(?<=\\_|-|\\.|\\s)(Arabic|ar|English|en|French|fr|german|de|Finnish|fi|dutch|nl|Danish|da|greek|el|hindi|hi|Indonesian|id|italian|it|Japanese|ja|Korean|ko|Norwegian|no|Persian|fa|Polish|pl|Portuguese|pt|Russian|ru|Swedish|sv|Thai|th|Ukrainian|uk|Urdu|ur|Vietnamese|vi|spanish|es|Romanian|ro|Hungarian|hu)\", flags= re.IGNORECASE)\n",
         "digitssuff_pt = re.compile(r\"\\s\\d{1,2}$\")\n",
-        "sn_in_pt = re.compile(r\"([S,s]|([S,s]easons?\\s?))\\d{1,2}\")\n",
-        "sn_nm_pt = re.compile(r\"([1-9][0-9]?)\")\n",
+        "season_pt0 = re.compile(r\"([S,s]|([S,s]easons?\\s?))\\d{1,2}\")\n",
+        "season_pt1 = re.compile(r\"\\b([S,s]|[S,s]eason([\\s,\\.]?))\\d{1,2}\")\n",
+        "season_number_pt = re.compile(r\"([1-9][0-9]?)\")\n",
         "del_pt = re.compile(r\"\\.del\\d*\\/\")\n",
         "sd_pt = re.compile(r\"(\\/content\\/drive\\/Shareddrives\\/)[A-Za-z0-9]+(?=\\/)\")\n",
         "imdbcount_pt = re.compile(r\"\\d+(?=\\stitles?)\")\n",
@@ -1604,7 +1604,7 @@
         "        name = name.split(quality)[0]\n",
         "    elif '720p' in name:\n",
         "        name = name.split('720p')[0]\n",
-        "    table = name.maketrans(\".\",\" \",\"()\")\n",
+        "    table = name.maketrans({\".\": \" \",\"(\": None, \")\": None})\n",
         "    trans = name.translate(table)\n",
         "    dgts = year_pt.findall(trans)\n",
         "    if dgts and len(dgts) >= 1:\n",
@@ -2179,7 +2179,7 @@
         "    if attrs.type_ == MOVIE:\n",
         "        return after_shave_movie(path, attrs.save_name, attrs.downloaded_diritems)\n",
         "    elif attrs.type_ == SHOW:\n",
-        "        return clean_tvshow(path, diritems = attrs.downloaded_diritems)\n",
+        "        return clean_tvshow(path, diritems= attrs.downloaded_diritems)\n",
         "    elif attrs.type_ == SEASON or attrs.type_ == EPISODE:\n",
         "        diritem =  ('', clean_season(path))\n",
         "        attrs.downloaded_diritems.append(diritem)\n",
@@ -2229,8 +2229,10 @@
         "            downloaded_diritems.append(newdiritem)\n",
         "    except:\n",
         "        error(ex())\n",
+        "        release()\n",
         "        return False\n",
         "    else:\n",
+        "        release()\n",
         "        return True\n",
         "    if cmd: pass\n",
         "\n",
@@ -3417,7 +3419,7 @@
         "\n",
         "#### API / Download files utils\n",
         "\n",
-        "def clean_download_destination(attrs: DownloadAttrs):\n",
+        "def clean_download_destination(attrs: DownloadAttrs): #disabled temporarly \n",
         "    info(f'Cleaning distination for: {attrs.save_name}')\n",
         "    attrs.old_files = set()\n",
         "    delstr = '.del' + nowstr()\n",
@@ -3450,7 +3452,7 @@
         "                                    if rt:\n",
         "                                        info(lines = rt)\n",
         "\n",
-        "    elif attrs.type_ == MOVIE:\n",
+        "    elif attrs.type_ == MOVIE: ### not selected files should be replaced\n",
         "        p0 = attrs.existing_file \n",
         "        p1 = attrs.existing_dir + '/' + delstr\n",
         "        os.makedirs(p1, exist_ok = True)\n",
@@ -3525,7 +3527,7 @@
         "        mv(path0, path1, backup = backup)\n",
         "    return\n",
         "\n",
-        "def transfer_download_files(handle, copy = False):\n",
+        "def transfer_download_files(handle, copy= False):\n",
         "    handle.pause()\n",
         "    attrs: DownloadAttrs = handle.attrs\n",
         "    status = handle.status()\n",
@@ -3573,8 +3575,7 @@
         "    if attrs.type_ == EPISODE and os.path.isdir(donesavepath):\n",
         "        donesavepath = donesavepath + \"/\"     \n",
         "    if os.path.exists(donesavepath):\n",
-        "        if attrs.replace and attrs.downloaded_diritems:\n",
-        "            clean_download_destination(attrs) \n",
+        "        #if attrs.replace and attrs.downloaded_diritems: clean_download_destination(attrs) #TODO\n",
         "        info(f'Saving {attrs.save_name} to: {attrs.save_path}')\n",
         "        cmd = f'rsync --size-only -r \"{donesavepath}\" \"{attrs.save_path}\"'\n",
         "        output0001 = !$cmd\n",
@@ -3598,11 +3599,10 @@
         "                info(f'Deleting uncompleted source: {attrs.uncomplete_source}')\n",
         "                cmd = f'rm -r \"{attrs.uncomplete_source}\"'\n",
         "                !$cmd\n",
-        "            if attrs.replace and attrs.old_files:\n",
-        "                info('Deleting replaced files.')\n",
-        "                for oldfilepath in attrs.old_files:\n",
-        "                    rm(oldfilepath, process_backup = attrs.backup) \n",
-        "\n",
+        "            if attrs.replace and attrs.old_files: # TODO\n",
+        "                #info('Deleting replaced files.')\n",
+        "                #for oldfilepath in attrs.old_files: rm(oldfilepath, process_backup= attrs.backup) \n",
+        "                pass\n",
         "            info(f'Done saving {attrs.save_name}.')\n",
         "            return True   \n",
         "        else:\n",
@@ -3907,75 +3907,64 @@
         "def getfileselectionwithstr(files: list[DownloadFile], selectionstr = \"\"):\n",
         "    if not selectionstr:\n",
         "        return False\n",
-        "    includerange = []\n",
-        "    excluderange = []\n",
-        "    seasonselectionstr_pt = \"\"\n",
+        "    includefiles = set()\n",
+        "    excludefiles = set()\n",
+        "    seasonintervals = set()\n",
         "    if ',' in selectionstr:\n",
         "        inputs = selectionstr.split(',')\n",
         "    else:\n",
         "        inputs = [selectionstr]   \n",
-        "    try: \n",
-        "        for i  in inputs:\n",
-        "            i = i.strip()\n",
-        "            if i[0] == 's' or i[0] == 'S':\n",
-        "                lookup = sn_in_pt.search(i)\n",
+        "    try:\n",
+        "        for inputitem  in inputs:\n",
+        "            inputitem = inputitem.strip()\n",
+        "            if inputitem[0] == 's' or inputitem[0] == 'S':\n",
+        "                lookup = season_pt0.search(inputitem)\n",
         "                if lookup:\n",
-        "                    if '-' in i:\n",
-        "                        rng = i.split('-')\n",
-        "                        lookup1 = sn_nm_pt.search(rng[0])\n",
+        "                    if '-' in inputitem:\n",
+        "                        range0 = inputitem.split('-')\n",
+        "                        lookup1 = season_number_pt.search(range0[0])\n",
         "                        start = lookup1.group() if lookup1 else ''\n",
-        "                        lookup1 = sn_nm_pt.search(rng[1])\n",
+        "                        lookup1 = season_number_pt.search(range0[1])\n",
         "                        end = lookup1.group() if lookup1 else ''\n",
-        "                        if not (start or end):\n",
-        "                            continue\n",
+        "                        if not (start or end): continue\n",
         "                        elif start and end:\n",
-        "                            add = list(range(int(start), int(end) + 1))\n",
-        "                        elif start:\n",
-        "                            add = [int(start)]\n",
+        "                            seasonintervals.update({f'({addseason:02})' for addseason in range(int(start), int(end)+1)})\n",
         "                        else:\n",
-        "                            add = [int(end)]\n",
+        "                            addseason = int(end) if end else int(start)\n",
+        "                            seasonintervals.add(f\"({addseason:02})\")\n",
         "                    else:\n",
-        "                        lookup1 = sn_nm_pt.search(i)\n",
-        "                        if lookup1:\n",
-        "                            add = [int(lookup1.group())]\n",
-        "                    si2 = 0\n",
-        "                    if seasonselectionstr_pt:\n",
-        "                        seasonselectionstr_pt += '|'\n",
-        "                    for item in add:\n",
-        "                        sep = '|' if 0 < si2 < len(add) else ''\n",
-        "                        zero = '0?' if item < 10 else '' \n",
-        "                        seasonselectionstr_pt += f'{sep}({zero}{item})' \n",
-        "                        si2 += 1                      \n",
+        "                        lookup1 = season_number_pt.search(inputitem)\n",
+        "                        if lookup1: seasonintervals.add(f\"({int(lookup1.group()):02})\")                \n",
         "\n",
-        "            elif i.lower().startswith('n:'):\n",
-        "                i = i[2:]\n",
-        "                if '-' in i:\n",
-        "                    rng = i.split('-')\n",
-        "                    excluderange.extend(range(int(rng[0])-1, int(rng[1])))\n",
-        "                else:\n",
-        "                    excluderange[0].append(int(i))\n",
+        "            elif inputitem.lower().startswith('n:'):\n",
+        "                inputitem = inputitem[2:]\n",
+        "                if '-' in inputitem:\n",
+        "                    range0 = inputitem.split('-')\n",
+        "                    excludefiles.update(set(range(int(range0[0])-1, int(range0[1]))))\n",
+        "                else:   excludefiles.add(int(inputitem))\n",
         "\n",
         "            else:\n",
-        "                if '-' in i :\n",
-        "                    rng = i.split('-')\n",
-        "                    includerange.extend(range(int(rng[0])-1, int(rng[1])))          \n",
-        "                else:\n",
-        "                    includerange[0].append(int(i))\n",
-        "    except Exception as e:\n",
+        "                if '-' in inputitem :\n",
+        "                    range0 = inputitem.split('-')\n",
+        "                    includefiles.update(set(range(int(range0[0])-1, int(range0[1]))))          \n",
+        "                else:   includefiles.add(int(inputitem))\n",
+        "    except:\n",
         "        error(ex())\n",
         " \n",
-        "    seasonselectionstr_pt =  re.compile(r\"\\b\" + f\"[Ss]({seasonselectionstr_pt})\" + r\"(?=[Ee]|\\s|\\.)\") if seasonselectionstr_pt else \"\"\n",
-        "    includes = True if len(includerange) >= 1 or seasonselectionstr_pt else False \n",
-        "    excludes = True if len(excluderange) >= 1 else False \n",
+        "    seasonselectionstr_pt =  re.compile(r\"\\b\" + f\"[Ss]({'|'.join(seasonintervals)})\" + r\"(?=[Ee]|\\s|\\.)\") if seasonintervals else None\n",
+        "    includes = len(includefiles) >= 1 or bool(seasonselectionstr_pt)\n",
+        "    excludes = len(excludefiles) >= 1 \n",
+        "    info(f\"Selecting files: Seasons {seasonintervals}, Include {includefiles}, Exclude {excludefiles}\")\n",
         "    for file in files:\n",
-        "        i = file.index\n",
-        "        if excludes and (i in excluderange):\n",
+        "        inputitem = file.index\n",
+        "        if excludes and (inputitem in excludefiles):\n",
         "            file.selected = False\n",
         "        elif includes:\n",
-        "            if (seasonselectionstr_pt and seasonselectionstr_pt.search(seasonselectionstr_pt, file.name)) or (i in includerange):\n",
+        "            if (seasonselectionstr_pt and seasonselectionstr_pt.search(seasonselectionstr_pt, file.name)) or (inputitem in includefiles):\n",
         "                file.selected = True\n",
         "            else:\n",
         "                file.selected = False\n",
+        "    release()\n",
         "\n",
         "def process_adddownload_result(result):\n",
         "    if result.status == ADDPENDING or result.awaiting_decision :\n",
